# lang_narrow

./: .gitignore  README.md  build.sh  index.html  js.ml  lang_narrow.js  lang_narrow.map
.circleci/: Dockerfile  config.yml
examples/: is_record.c  is_record.eval  is_record.nl  is_union.c  is_union.eval  is_union.nl  primitive_narrowing.c  primitive_narrowing.eval  record_and_union_narrowing.c  record_and_union_narrowing.eval  record_and_union_narrowing.nl  simple_narrow.c  simple_narrow.txt  simple_record.c  simple_record.eval  simple_record.txt  update.sh
src/: codegenC.ml  dune  eval.ml  js.ml  language.ml  lexer.mll  main.ml  parser.mly  runtime.c  typecheck.ml
www/: build.sh  index.html
